[fix] 사용자정의에러, 서버에러 분리